--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -11,13 +11,12 @@
         android:id="@+id/loadingImage"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@android:drawable/btn_star_big_on"
+        android:src="@drawable/bao_bao_loadingscreen"
         app:layout_constraintBottom_toTopOf="@+id/loadingText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:tint="@color/green" />
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
         android:id="@+id/loadingText"
