--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,15 @@
     <color name="white">#FFFFFFFF</color>
     <color name="black">#FF000000</color>
 
+    <!-- Mood-specific colors -->
+    <color name="light_yellow">#FFF9C4</color>
+    <color name="gold">#FFD54F</color>
+    <color name="light_blue">#BBDEFB</color>
+    <color name="blue">#64B5F6</color>
+    <color name="light_purple">#E1BEE7</color>
+    <color name="purple">#BA68C8</color>
+    <color name="light_gray">#E0E0E0</color>
+
     <!-- Legacy / Default colors if needed for themes -->
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
